[package]
name = "rgb2hex"
version = "0.2.0"
edition = "2018"
description = "Convert RGB color to hexadecimal color"
license = "MIT"
authors = ["github.com/Fn79"]
repository = "https://github.com/Fn79/rgb2hex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
